# network_packet_anamoly_detection_env

./: .env  Dockerfile  README.md  __init__.py  graders.py  inference.py  models.py  openenv.yaml  packet_generator.py  pyproject.toml
server/: Dockerfile  __init__.py  app.py  network_anamoly_detection_environment.py
