# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-network-packet-anomaly-detection"
version = "0.1.0"
description = "Network Packet Anomaly Detection environment for OpenEnv - classify packets as normal or anomalous"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.2",
    # LLM integration for inference
    "openai>=1.0.0",
    # Async support
    "aiofiles>=24.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m network_anamoly_detection.server.app
server = "network_anamoly_detection.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["network_anamoly_detection", "network_anamoly_detection.server"]
package-dir = { "network_anamoly_detection" = ".", "network_anamoly_detection.server" = "server" }